[package]
name = "tui-grep"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
crossterm    = { version = "0.29", features = ["event-stream"] }
fuzzy-matcher = "0.3"           # SmithWaterman / SkimV2 scorer (same feel as fzf)

ratatui = { version = "0.30.0", features = ["crossterm"] }
walkdir = "2.5.0"
